RESOLVED FIXED116568
[WK2] WebKitTestRunner always crashes on exit
https://bugs.webkit.org/show_bug.cgi?id=116568
Summary [WK2] WebKitTestRunner always crashes on exit
Alexey Proskuryakov
Reported 2013-05-21 12:31:45 PDT
I'm always getting a crash in WebContextSupplement::deref when WebKitTestRunner exits. What happens here is that WebKitTestRunner destroys WTR::WebNotificationProvider when done, but WebKit doesn't know that. So when WebContext is destroyed, it calls into the deleted provider object. void WebNotificationManagerProxy::contextDestroyed() { m_provider.removeNotificationManager(this); } <rdar://problem/13929704>
Attachments
proposed fix (4.85 KB, patch)
2013-05-21 12:37 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2013-05-21 12:37:11 PDT
Created attachment 202458 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-05-21 13:37:59 PDT
Note You need to log in before you can comment on or make changes to this bug.