        <rdar://problem/13929704> [WK2] WebKitTestRunner always crashes on exit         https://bugs.webkit.org/show_bug.cgi?id=116568

Reviewed by Anders Carlsson.

        * WebKitTestRunner/WebNotificationProvider.cpp:
        (WTR::WebNotificationProvider::~WebNotificationProvider):
        * WebKitTestRunner/WebNotificationProvider.h:
        When the provider is destroyed, it should no longer be registered with the manager.

        * WebKitTestRunner/GeolocationProviderMock.cpp:
        (WTR::GeolocationProviderMock::~GeolocationProviderMock):
        * WebKitTestRunner/GeolocationProviderMock.h:
        I wasn't seeing a crash here, but this code has the same issue as notification
        provider, so applying the same fix.

        * WebKitTestRunner/TestController.cpp: (WTR::TestController::~TestController):
        Close icon database. I started seeing ASSERT(!isOpen()) in WebCore IconDatabase
        destructor having fixed the above.



Canonical link: https://commits.webkit.org/134875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150474 268f45cc-cd09-0410-ab3c-d52691b4dbfc