Tools/WebKitTestRunner/GeolocationProviderMock.h
@@ -33,6 +33,7 @@ namespace WTR {
 class GeolocationProviderMock {
 public:
     GeolocationProviderMock(WKContextRef);
+    ~GeolocationProviderMock();
 
     void setPosition(double latitude, double longitude, double accuracy, bool providesAltitude, double altitude, bool providesAltitudeAccuracy, double altitudeAccuracy, bool providesHeading, double heading, bool providesSpeed, double speed);
     void setPositionUnavailableError(WKStringRef errorMessage);
